plugins/mermaid/plugin/src/test/resources/intention/gitgraph/cherry-pick_of_merge_commit_without_parent.mermaid
gitGraph
  commit id: "ZERO"
  branch feature
  branch release
  checkout feature
  commit id: "A"
  commit id: "B"
  checkout main
  merge feature id: "M"
  checkout release
  commit id: "C"
  <error descr="An immediate parent commit must be specified">cherry-pick id:"M"</error>